landing mais bem feitinha

--- a/index.html
+++ b/index.html
@@ -1,69 +1,195 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Front in Campinas 2018 &bull; O maior evento Front-end de Campinas</title>
-  <meta name="description" content="Front in Campinas 2018 - Maior evento Front-end de Campinas">
-  <meta name="keywords" content="desenvolvedor frontend, desenvolvedor front-end, front-end em Campinas, eventos de front-end em Campinas, frontincampinas, frontincampinas 2018, eventos de desenvolvimento, desenvolvimento, front-end, html, html5, css3, css, javascript, js">
-  <meta property="og:locale" content="pt_BR">
-  <meta property="og:url" content="http://www.frontincampinas.com.br">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Front in Campinas 2018">
-  <meta property="og:site_name" content="Front in Campinas">
-  <meta property="og:description" content="Maior evento front-end de Campinas">
-  <meta property="og:image" content="http://www.frontincampinas.com.br/assets/img/social.png">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Front in Campinas 2018">
-  <meta name="twitter:description" content="Maior evento front-end de Campinas">
-  <meta name="twitter:site" content="@frontincampinas">
-  <meta name="twitter:image" content="http://www.frontincampinas.com.br/assets/img/social.png">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/main.css">
+<html lang="pt-br">
+	<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Front in Campinas 2018 &bull; O maior evento Front-end de Campinas</title>
+    <meta name="description" content="Front in Campinas 2018 - Maior evento Front-end de Campinas">
+    <meta name="keywords" content="desenvolvedor frontend, desenvolvedor front-end, front-end em Campinas, eventos de front-end em Campinas, frontincampinas, frontincampinas 2018, eventos de desenvolvimento, desenvolvimento, front-end, html, html5, css3, css, javascript, js">
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:url" content="http://www.frontincampinas.com.br">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Front in Campinas 2018">
+    <meta property="og:site_name" content="Front in Campinas">
+    <meta property="og:description" content="Maior evento front-end de Campinas">
+    <meta property="og:image" content="http://www.frontincampinas.com.br/images/social.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Front in Campinas 2018">
+    <meta name="twitter:description" content="Maior evento front-end de Campinas">
+    <meta name="twitter:site" content="@frontincampinas">
+    <meta name="twitter:image" content="http://www.frontincampinas.com.br/images/social.png">
+		<script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+		<script src="js/fonts.js"></script>
+		<link rel="stylesheet" href="css/bootstrap.css" />
+		<link rel="stylesheet" href="css/icons.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/custom.css" />
+		<link rel="stylesheet" href="css/front_in_campinas.css" />
+		<link rel="stylesheet" href="css/preloader.css" />
+	</head>
+    <body class="dark-page">
+	<div id="preloader"><div class="loading-round"></div></div>
+		<div id="wrap">
+			<header id="header-center-logo-slogan-img" class="pt-125 pb-200 text-center dark">
+    			<div class="container">
+        			<div class="row no-pad">
+            			<div class="col-md-12" style="">
+                			<!-- <img src="images/logo2-light-big.png" srcset="images/logo2-light-big@2x.png 2x" class="mb-75" alt="Gumapp"> -->
+                			<h1 class="mb-30" style=""><strong>Front in Campinas</strong></h1>
+                            <h3 class="mb-40" >Maio de 2018 - Campinas/SP</h3>
+                			<!-- <p class="mb-75 compressed-box-50" style="">Participe deste evento, de front-end em Campinas, aguarde novidades em breve.</p> -->
 
-</head>
-<body>
+                			<a class="btn btn-lg btn-default goto" style="" href="#"><i class="icon-price-tags icon-size-m icon-position-left"></i><span style="">Ingressos em breve</span></a>
+            			</div>
+        			</div>
+    			</div>
 
-  <main>
-    <h1 class="main__title">Front in Campinas 2018</h1>
-  <div id="mc_embed_signup">
-    <form action="https://github.us13.list-manage.com/subscribe/post?u=0a8b002f1bb0c3f8e8c1c8713&amp;id=5fcab5589c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-      <h2>Inscreva-se para receber novidades sobre evento</h2>
-    <div class="mc-field-group">
-      <label class="mc-label" for="mce-EMAIL">E-mail <span class="asterisk">*</span>
-    </label>
-      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-      <input type="submit" value="Avise-me" name="subscribe" id="mc-embedded-subscribe" class="button">
-    </div>
-      <div id="mce-responses" class="clear">
-        <div class="response" id="mce-error-response" style="display:none"></div>
-        <div class="response" id="mce-success-response" style="display:none"></div>
-      </div>
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0a8b002f1bb0c3f8e8c1c8713_5fcab5589c" tabindex="-1" value=""></div>
-        </div>
-    </form>
-    </div>
-  </main>
+    			<a href="#" target="_self" class="" style="position:absolute; bottom:0; left:50%; margin-left:-150px;"></a>
+    			<div class="bg bg-video" data-vide-bg="mp4: video/abstract_video_1.mp4, ogv: video/abstract_video_1.ogv, jpg: video/abstract_video_1.jpg" data-vide-options="posterType: jpg"></div>
+			</header><section id="subscribe-text-field" class="pt-50 pb-50 dark">
+    			<div class="container">
+        			<div class="row flex-md-vmiddle">
+            			<div class="col-md-6" style="">
+                			<h2 class="mb-10" style=""><b>Receba notificações e novidades sobre o evento.</b></h2>
+                			<p class="small" style="">Cadastre-se para saber quando os primeiros ingressos estarão disponíveis para compra com preços especiais para early birds. Adicione seu email na lista.</p>
+            			</div>
+            			<div class="col-md-6" id="mc_embed_signup">
+                			<form action="https://github.us13.list-manage.com/subscribe/post?u=0a8b002f1bb0c3f8e8c1c8713&amp;id=5fcab5589c" method="post" class="contact_form form-inline form-flex" novalidate="novalidate" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" _lpchecked="1">
+                    			<div class="form-group">
+                        			<input type="email" class="form-control" placeholder="Inscreva-se com seu e-mail" name="EMAIL" size="10">
+                          </div><button type="submit" data-loading-text="•••" data-complete-text="Completed!" data-reset-text="Tente novamente mais tarde..." class="btn btn-primary" style=""><span style=""><strong>Quero ser avisado</strong></span></button>
+                          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0a8b002f1bb0c3f8e8c1c8713_5fcab5589c" tabindex="-1" value=""></div>
+                			</form>
+            			</div>
+        			</div>
+    			</div>
+    			<div class="bg"></div>
+			</section><section id="price-single" class="pt-150 pb-150 text-center light">
+    			<div class="container">
+        			<div class="row">
+            			<div class="col-md-4 col-md-offset-4" style="">
+                			<div class="card card-simple padding-box shadow-box light" style="background-color: rgb(255, 255, 255);">
 
-  <footer>
-    <p class="footer__title">Organização</p>
-    <a class="footer__logo" href="https://campinasfrontend.com.br" target="_blank">
-      <img
-        src="assets/img/campinas-front-end.png"
-        alt="Logotipo do Campinas front-end. Símbolo circular com uma tag no meio e vários pontos coloridos em volta, interligados por traços"
-      >
-    </a>
-  </footer>
+                    			<h2 class="" style="">Early Birds</h2>
+                    			<hr>
+                    			<ul class="text-icon-list inline-block">
+                                <li class="" style=""><i class="icon-ticket icon-size-m icon-color"></i>
+                                <span style="">Ingressos com preços especiais</span></li>
+                        			<!--
+                        			<li class=""><i class="icon-bucket icon-size-m icon-color"></i><span>Clean design</span></li>
+                        			<li class=""><i class="icon-equalizer icon-size-m icon-color"></i><span>Great flexibility</span></li>
+                        			<li><i class="icon-book2 icon-size-m icon-color"></i><span>Documentation</span></li>
+                        			<li class=""><i class="icon-shield-check icon-size-m icon-color"></i><span>6 month support</span></li> -->
+                    			</ul>
+                    			<div class="flex-row-inline" style="">
+                        			<h3 class="mt-30" style="">Em Breve</h3>
+                    			</div>
+                    			<a class="btn btn-primary btn-block" style="" href="#"><span style="">Aguarde</span></a>
+                			</div>
+                			<p class="desc-text small" style="">Cadastre seu e-mail para receber avisos e comprar seu ingresso no valor promocional para early birds.</p>
+            			</div>
+        			</div>
+    			</div>
+    			<div class="bg"></div>
+			</section><section id="clients-text-3col-3row" class="pt-125 pb-150 dark">
+    			<div class="container">
+        			<div class="row flex-md-vmiddle">
+            			<div class="col-md-5" style="">
+                			<h2 class="mb-50" style="">Seja um patrocinador do Front in Campinas!</h2>
+                			<p class="mb-50" style="">Faça parte de um evento como o Front in Campinas, divulgue sua marca, produto ou seriços e faça contato com pessoas da área de front-end em Campinas e região.  </p>
+                			<h3><a href="mailto:&#099;&#111;&#110;&#116;&#097;&#116;&#111;&#064;&#102;&#114;&#111;&#110;&#116;&#105;&#110;&#099;&#097;&#109;&#112;&#105;&#110;&#097;&#115;&#046;&#099;&#111;&#109;&#046;&#098;&#114;">&#099;&#111;&#110;&#116;&#097;&#116;&#111;&#064;&#102;&#114;&#111;&#110;&#116;&#105;&#110;&#099;&#097;&#109;&#112;&#105;&#110;&#097;&#115;&#046;&#099;&#111;&#109;&#046;&#098;&#114;</a></h3>
+            			</div>
+            			<!-- <div class="col-md-2 col-md-offset-1 text-center">
+                			<img class="screen mb-50" src="images/client-1-dark.png" srcset="images/client-1-dark@2x.png 2x" alt="Client">
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113078834-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-113078834-1');
-  </script>
-</body>
+                			<img class="screen mb-50" src="images/client-2-dark.png" srcset="images/client-2-dark@2x.png 2x" alt="Client">
+
+                			<img class="screen" src="images/client-3-dark.png" srcset="images/client-3-dark@2x.png 2x" alt="Client">
+
+            			</div>
+            			<div class="col-md-2 text-center">
+
+                			<img class="screen mb-50" src="images/client-4-dark.png" srcset="images/client-4-dark@2x.png 2x" alt="Client">
+
+                			<img class="screen mb-50" src="images/client-5-dark.png" srcset="images/client-5-dark@2x.png 2x" alt="Client">
+
+                			<img class="screen" src="images/client-6-dark.png" srcset="images/client-6-dark@2x.png 2x" alt="Client">
+
+            			</div>
+            			<div class="col-md-2 text-center">
+
+                			<img class="screen mb-50" src="images/client-7-dark.png" srcset="images/client-7-dark@2x.png 2x" alt="Client">
+
+                			<img class="screen mb-50" src="images/client-8-dark.png" srcset="images/client-8-dark@2x.png 2x" alt="Client">
+
+                			<img class="screen" src="images/client-9-dark.png" srcset="images/client-9-dark@2x.png 2x" alt="Client">
+
+            			</div> -->
+        			</div>
+    			</div>
+    			<div class="bg"></div>
+			</section><footer id="footer-list-subscribe-2" class="dark pt-100 pb-100">
+    			<div class="container">
+        			<!-- <div class="row">
+            			<div class="col-md-12">
+                			<div class="row">
+
+                    			<div class="col-sm-12" style="">
+                        			<h4 class="" style=""><strong>Sobre Front in Campinas</strong></h4>
+                        			<p class="" style="">The given template is armed with the number of settings, so you can easily adapt it according to you requirements. Plenty of additional elements guarantee that you will get the project you exactly wanted in the end, saving you time and money.</p>
+                    			</div>
+                    			<div class="col-sm-3">
+                        			<h4 class=""><strong>Redes Sociais</strong></h4>
+                        			<ul class="text-list">
+                            			<li class="">
+                                			<i class="icon-facebook icon-position-left"></i><span><a href="#">Facebook</a></span>
+                            			</li>
+                            			<li class="">
+                                			<i class="icon-twitter icon-position-left"></i><span><a href="#">Twitter</a></span>
+                            			</li>
+                            			<li class="">
+                                			<i class="icon-instagram icon-position-left"></i><span><a href="#">Instagram</a></span>
+                            			</li>
+                            			<li>
+                                			<i class="icon-linkedin icon-position-left"></i><span><a href="#">Linkedin</a></span>
+                            			</li>
+                        			</ul>
+                    			</div>
+                			</div>
+            			</div>
+        			</div> -->
+        			<hr class="mt-50 mb-50">
+        			<div class="row">
+            			<div class="col-md-12 text-center" style="">
+                			<p class="" style="">© Front in Campinas&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
+            			</div>
+            			<!-- <div class="col-md-6 text-md-right">
+                			<img src="images/logo2-light.png" srcset="images/logo2-light@2x.png 2x" alt="logo" class="screen">
+            			</div> -->
+        			</div>
+    			</div>
+    			<div class="bg"></div>
+			</footer>
+		</div>
+		<footer></footer>
+		<div class="modal-container"></div>
+
+
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/jquery.vide.min.js"></script>
+		<script src="js/jquery.validate.min.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCByts0vn5uAYat3aXEeK0yWL7txqfSMX8"></script>
+		<script src="https://cdn.jsdelivr.net/jquery.goodshare.js/3.2.8/goodshare.min.js"></script>
+    <script src="js/front_in_campinas.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113078834-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-113078834-1');
+    </script>
+	</body>
 </html>
