--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     			</div>
 
     			<a href="#" target="_self" class="" style="position:absolute; bottom:0; left:50%; margin-left:-150px;"></a>
-    			<div class="bg bg-video" data-vide-bg="mp4: video/abstract_video_1.mp4, ogv: video/abstract_video_1.ogv, jpg: video/abstract_video_1.jpg" data-vide-options="posterType: jpg"></div>
+    			<div class="bg bg-video" data-vide-bg="jpg: video/abstract_video_1.jpg" data-vide-options="posterType: jpg"></div>
 			</header><section id="subscribe-text-field" class="pt-50 pb-50 dark">
     			<div class="container">
         			<div class="row flex-md-vmiddle">
