Melhorias de performance

--- a/index.html
+++ b/index.html
@@ -19,34 +19,32 @@
     <meta name="twitter:description" content="Maior evento front-end de Campinas">
     <meta name="twitter:site" content="@frontincampinas">
     <meta name="twitter:image" content="http://www.frontincampinas.com.br/images/social.png">
-		<script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
-		<script src="js/fonts.js"></script>
-		<link rel="stylesheet" href="css/bootstrap.css" />
-		<link rel="stylesheet" href="css/icons.css" />
-		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/custom.css" />
-		<link rel="stylesheet" href="css/front_in_campinas.css" />
-		<link rel="stylesheet" href="css/preloader.css" />
+
+	<script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+	<script src="js/fonts.js"></script>
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/icons.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/custom.css" />
+	<link rel="stylesheet" href="css/front_in_campinas.css" />
 	</head>
     <body class="dark-page">
-	<div id="preloader"><div class="loading-round"></div></div>
 		<div id="wrap">
 			<header id="header-center-logo-slogan-img" class="pt-125 pb-200 text-center dark">
     			<div class="container">
         			<div class="row no-pad">
             			<div class="col-md-12" style="">
-                			<!-- <img src="images/logo2-light-big.png" srcset="images/logo2-light-big@2x.png 2x" class="mb-75" alt="Gumapp"> -->
                 			<h1 class="mb-30" style=""><strong>Front in Campinas</strong></h1>
                             <h3 class="mb-40" >Maio de 2018 - Campinas/SP</h3>
-                			<!-- <p class="mb-75 compressed-box-50" style="">Participe deste evento, de front-end em Campinas, aguarde novidades em breve.</p> -->
 
                 			<a class="btn btn-lg btn-default goto" style="" href="#"><i class="icon-price-tags icon-size-m icon-position-left"></i><span style="">Ingressos em breve</span></a>
             			</div>
         			</div>
     			</div>
 
-    			<a href="#" target="_self" class="" style="position:absolute; bottom:0; left:50%; margin-left:-150px;"></a>
-    			<div class="bg bg-video" data-vide-bg="jpg: video/abstract_video_1.jpg" data-vide-options="posterType: jpg"></div>
+			<div class="bg bg-video" data-vide-bg="jpg: video/abstract_video_1.jpg" data-vide-options="posterType: jpg">
+				<div class="bg-abstract"></div>
+			</div>
 			</header><section id="subscribe-text-field" class="pt-50 pb-50 dark">
     			<div class="container">
         			<div class="row flex-md-vmiddle">
@@ -162,7 +160,7 @@
         			<hr class="mt-50 mb-50">
         			<div class="row">
             			<div class="col-md-12 text-center" style="">
-                			<p class="" style="">© Front in Campinas&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
+                			<p>© Front in Campinas</p>
             			</div>
             			<!-- <div class="col-md-6 text-md-right">
                 			<img src="images/logo2-light.png" srcset="images/logo2-light@2x.png 2x" alt="logo" class="screen">
@@ -172,19 +170,8 @@
     			<div class="bg"></div>
 			</footer>
 		</div>
-		<footer></footer>
-		<div class="modal-container"></div>
 
-
-		<script src="js/jquery-2.1.4.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/jquery.vide.min.js"></script>
-		<script src="js/jquery.validate.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCByts0vn5uAYat3aXEeK0yWL7txqfSMX8"></script>
-		<script src="https://cdn.jsdelivr.net/jquery.goodshare.js/3.2.8/goodshare.min.js"></script>
-    <script src="js/front_in_campinas.js"></script>
-
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113078834-1"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113078834-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
