Add sympla link and remove early bird section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 			<h1 class="mb-30" style=""><strong>Front in Campinas</strong></h1>
                             <h3 class="mb-40" >Maio de 2018 - Campinas/SP</h3>
 
-                			<a class="btn btn-lg btn-default goto" style="" href="#"><i class="icon-price-tags icon-size-m icon-position-left"></i><span style="">Ingressos em breve</span></a>
+                			<a class="btn btn-lg btn-default goto" style="" href="https://www.sympla.com.br/front-in-campinas__248102"><i class="icon-price-tags icon-size-m icon-position-left"></i><span style="">Innscreva-se</span></a>
             			</div>
         			</div>
     			</div>
@@ -59,33 +59,6 @@
                           </div><button type="submit" data-loading-text="•••" data-complete-text="Completed!" data-reset-text="Tente novamente mais tarde..." class="btn btn-primary" style=""><span style=""><strong>Quero ser avisado</strong></span></button>
                           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0a8b002f1bb0c3f8e8c1c8713_5fcab5589c" tabindex="-1" value=""></div>
                 			</form>
-            			</div>
-        			</div>
-    			</div>
-    			<div class="bg"></div>
-			</section><section id="price-single" class="pt-150 pb-150 text-center light">
-    			<div class="container">
-        			<div class="row">
-            			<div class="col-md-4 col-md-offset-4" style="">
-                			<div class="card card-simple padding-box shadow-box light" style="background-color: rgb(255, 255, 255);">
-
-                    			<h2 class="" style="">Early Birds</h2>
-                    			<hr>
-                    			<ul class="text-icon-list inline-block">
-                                <li class="" style=""><i class="icon-ticket icon-size-m icon-color"></i>
-                                <span style="">Ingressos com preços especiais</span></li>
-                        			<!--
-                        			<li class=""><i class="icon-bucket icon-size-m icon-color"></i><span>Clean design</span></li>
-                        			<li class=""><i class="icon-equalizer icon-size-m icon-color"></i><span>Great flexibility</span></li>
-                        			<li><i class="icon-book2 icon-size-m icon-color"></i><span>Documentation</span></li>
-                        			<li class=""><i class="icon-shield-check icon-size-m icon-color"></i><span>6 month support</span></li> -->
-                    			</ul>
-                    			<div class="flex-row-inline" style="">
-                        			<h3 class="mt-30" style="">Em Breve</h3>
-                    			</div>
-                    			<a class="btn btn-primary btn-block" style="" href="#"><span style="">Aguarde</span></a>
-                			</div>
-                			<p class="desc-text small" style="">Cadastre seu e-mail para receber avisos e comprar seu ingresso no valor promocional para early birds.</p>
             			</div>
         			</div>
     			</div>
